Quartus_Sim-Em/hello_world/bin/hello_world.11438.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl" -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=211 -Xclang -ivfsoverlay-lib/home/joerock/intelFPGA_pro/21.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device"
Setting target instruction set architecture to: Default (Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:27:3: error: expected ')'
  id = -1;                                   
  ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:26:37: note: to match this '('
  unsigned thread_id = get_global_id(0
                                    ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:31:8: warning: incompatible integer to pointer conversion assigning to '__global int *__private' from '__private unsigned int'
    id = thread_id;
       ^ ~~~~~~~~~
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
